--- a/public/css/inicio.css
+++ b/public/css/inicio.css
@@ -1,3 +1,12 @@
+/*Tamaño carousel e imagen dentro de este*/
+.carousel-item {
+	width: 100%;
+	height: 400px;
+}
+.carousel-item img {
+	height: 100%;
+	width: 100%;
+}
 
 #Contenedor{
 	width: 400px;
@@ -25,11 +34,12 @@ border-radius: 150px;
  */
 .Icon{
 	margin-top: 5px;
-	margin-bottom:5px; 
+	margin-bottom:5px;
     color: #00447C;
-    font-size: 70px;
+    font-size: 75px;
     text-align: center;
 }
+
 /**
  * Se aplica al contenedor donde muetra
  * la opcion de olvidades tu contraseña
@@ -49,7 +59,9 @@ border-radius: 150px;
 /******************************************/
 /***    DISEÑO PARA MOVILES 320        ****/
 /******************************************/
-@media only screen and (max-width:320px){
+@media only screen and (max-width:320px) {
+
+}
 #Contenedor{
 	width: 100%;
 	height: auto;
@@ -62,3 +74,5 @@ border-radius: 150px;
 @media only screen and (max-width:240px){
 	
 }
+
+
